AddNginx/ingress.yaml
# @format

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example.com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: blue-green.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/blue"
            backend:
              service:
                name: blue
                port:
                  number: 80
          - pathType: Prefix
            path: "/green"
            backend:
              service:
                name: green
                port:
                  number: 80
    - host: nginx.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
